syntax = "proto3";
package goshare.goshare;

option go_package = "github.com/mineralres/goshare/pkg/pb/goshare";

// 品种类型
enum ProductType {
  UNKOWN         = 0; // 未知
  FUTURE         = 1; // 期货
  STOCK          = 2; // 股票
  BOND           = 3; // 债券
  COMBINATION    = 4; // 组合
  OPTION         = 5; // 期权
  FUTURE_OPTION  = 6; // 期货期权
  STOCK_OPTION   = 7; // 股票期权
  SSE_ETF_OPTION = 8; // 上证50ETF期权
}

// 市场状态
message MarketStatus {
  int64 time     = 1; // 时点 time.Unix()%86400
  bool  send     = 2; // 允许发单
  bool  cancel   = 3; // 可以撤单
  bool  matching = 4; // 撮合时段
}

// 合约属性
message Instrument {
  string   exchange                = 1;  // 交易所
  string   symbol                  = 2;  // 合约代码
  string   product                 = 3;  // 品种
  int32    multiple                = 4;  // 合约乘数
  double   price_tick              = 5;  // 最小变动价位
  string   name                    = 6;  // 合约名称
  int32    position_rank           = 7;  // 品种持仓排名
  int64    update_time             = 8;  // 更新时间
  int32    trading_day             = 9;  // 当前交易日
  double   upper_limit             = 10; // 涨停
  double   lower_limit             = 11; // 跌停
  double   pre_close               = 12; // 昨收
  double   pre_settlement          = 13; // 昨结
  int32    pre_volume              = 14; // 昨成交
  int32    pre_position            = 15; // 昨持仓
  double   settlement_price        = 16; // 结算价
  int32    create_date             = 17; // 创设日期
  int32    open_date               = 18; // 开盘日期
  int32    expire_date             = 19; // 到期日
  int32    start_deliver_date      = 20; // 开始交割日
  int32    end_deliver_date        = 21; // 结束交割日
  bool     is_close_today_allowed  = 22; // 允许当日平仓
  int32    max_market_order_volume = 23; // 市价单单笔最大单量
  int32    min_market_order_volume = 24; // 市价单单笔最小单量
  int32    max_limit_order_volume  = 25; // 限价单单笔最大单量
  int32    min_limit_order_volume  = 26; // 限价单单笔最小单量
  string   underlying_symbol       = 27; // 基础合约
  double   strike_price            = 28; // 履约价
  string   call_or_put             = 29; // 看涨看跌
  double   underlying_multiple     = 30; // 基础合约乘数
  int32    min_buy_volume          = 31; // 最小买入数量
  int32    min_sell_volume         = 32; // 最小卖出数量
  bool     is_trading              = 33; // 是否还在交易
  string   exercise_date_type      = 34; // 行权日类型. 美式， 欧式...
  string   product_name            = 35; // 品种名称
  int32    product_type            = 36; // 品种类型
  string   product_class           = 37; // 品种板块
  bool     distinguish_position_time_type = 38; // 是否区别昨仓和今仓
  repeated MarketStatus time_rule         = 39; // 各时段交易状态
}

message InstrumentList { repeated Instrument list = 1; }